--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build ",
+    "deploy-aws": "aws s3 sync build/ s3://lucian-brooks-aws-hosting",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
