--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-gradient-icon": "^0.1.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.17"
