--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "css-loader": "^6.7.1",
     "emailjs": "^3.7.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-native-gradient-icon": "^0.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
+    "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.17"
   },
