--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.1.9",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
     "yarn": "^1.22.17"
   },
   "scripts": {
