--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lb-portfolio",
-  "homepage": "https://lucianaiolos.github.io/lb-portfolio/",
+  "homepage": "https://main.d2uvhbwu3henpm.amplifyapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
