--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "css-loader": "^6.7.1",
     "emailjs": "^3.7.0",
+    "install-peers": "^1.0.4",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
@@ -23,8 +24,8 @@
     "recharts": "^2.1.9",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0",
-    "yarn": "^1.22.17"
+    "webpack": "^5.73.0"
+    
   },
   "scripts": {
     "predeploy": "npm run build",
