--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
     "style-loader": "^3.3.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.73.0"
+    "web-vitals": "^2.1.4"
     
   },
   "scripts": {
