--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "predeploy": "npm run build",
