--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
     "style-loader": "^3.3.1",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
