--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -17,12 +18,14 @@
     "react-icons": "^4.3.1",
     "react-native-gradient-icon": "^0.1.2",
     "react-pdf": "^5.7.2",
+    "react-redux": "^8.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.5",
     "recharts": "^2.1.9",
+    "redux": "^4.2.0",
     "style-loader": "^3.3.1",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
