Implemented Animated Hamburger button

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "css-loader": "^6.7.1",
     "emailjs": "^3.7.0",
+    "hamburger-react": "^2.5.0",
     "install-peers": "^1.0.4",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
