changes to domain name, project name, and routing in app names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lb-portfolio",
+  "name": "ls-portfolio",
   "homepage": "https://luciansoto.com",
   "version": "0.1.0",
   "private": true,
